--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "filament/spatie-laravel-media-library-plugin": "^3.0",
-        "filament/spatie-laravel-tags-plugin": "^3.0",
+        "filament/spatie-laravel-media-library-plugin": "*",
+        "filament/spatie-laravel-tags-plugin": "*",
         "lara-zeus/core": "^3.2",
         "lara-zeus/filament-plugin-tools": "^1.0",
         "spatie/laravel-medialibrary": "^11.0",
