--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,8 @@
         "spatie/laravel-medialibrary": "^11.0",
         "spatie/laravel-sluggable": "^3.3",
         "spatie/laravel-tags": "^4.6",
-        "lara-zeus/core": "^4.0",
-        "lara-zeus/filament-plugin-tools": "^1.0"
+        "lara-zeus/core": "*",
+        "lara-zeus/filament-plugin-tools": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.1",
