--- a/composer.json
+++ b/composer.json
@@ -32,27 +32,24 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "filament/spatie-laravel-media-library-plugin": "^3.0",
-        "filament/spatie-laravel-tags-plugin": "^3.0",
-        "lara-zeus/core": "^3.2",
+        "php": "^8.3",
+        "filament/filament": "4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
+        "filament/spatie-laravel-tags-plugin": "^4.0",
+        "lara-zeus/core": "^4.0",
         "spatie/laravel-medialibrary": "^11.0",
         "spatie/laravel-sluggable": "^3.3",
         "spatie/laravel-tags": "^4.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.1",
-        "nunomaduro/collision": "^7.0",
-        "pestphp/pest-plugin-livewire": "2.x-dev",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "laravel/pint": "^1.0",
-        "larastan/larastan": "^2.2",
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.10"
+        "filament/upgrade": "4.0",
+        "larastan/larastan": "^3.8",
+        "laravel/pint": "^1.26",
+        "orchestra/testbench": "^10.8",
+        "pestphp/pest": "^4.2",
+        "pestphp/pest-plugin-livewire": "^4.0",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0"
     },
     "autoload": {
         "psr-4": {
