--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     ],
     "require": {
         "php": "^8.3",
-        "filament/filament": "4.0",
+        "filament/filament": "^4.0",
         "filament/spatie-laravel-media-library-plugin": "^4.0",
         "filament/spatie-laravel-tags-plugin": "^4.0",
         "lara-zeus/core": "^4.0",
