--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:styles": "npx tailwindcss -i resources/css/index.css -o resources/dist/content-management.css --postcss --watch",
+        "dev:styles": "npx @tailwindcss/cli -i resources/css/index.css -o resources/dist/content-management.css --watch",
         "dev:scripts": "node bin/build.js --dev",
-        "build:styles": "npx tailwindcss -i resources/css/index.css -o resources/dist/content-management.css --postcss --minify && npm run purge",
+        "build:styles": "npx @tailwindcss/cli -i resources/css/index.css -o resources/dist/content-management.css --minify && npm run purge",
         "build:scripts": "node bin/build.js",
         "purge": "filament-purge -i resources/dist/content-management.css -o resources/dist/content-management.css -v 3.x",
         "dev": "npm-run-all --parallel dev:*",
@@ -12,8 +12,7 @@
     },
     "devDependencies": {
         "@awcodes/filament-plugin-purge": "^1.1.1",
-        "@tailwindcss/forms": "^0.5.4",
-        "@tailwindcss/typography": "^0.5.9",
+        "@tailwindcss/cli": "^4.0.0",
         "autoprefixer": "^10.4.14",
         "esbuild": "^0.19.2",
         "npm-run-all": "^4.1.5",
@@ -21,6 +20,6 @@
         "postcss-import": "^15.1.0",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^3.3.3"
+        "tailwindcss": "^4.0.0"
     }
 }
